<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.appbar.MaterialToolbar

            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="noScroll"
            />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddExerciseActivity"
        android:layout_marginTop="55dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/weight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_weight"
            android:layout_width="58dp"
            android:layout_height="40dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/increment_weights"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="79dp"
            android:text="@string/reps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/edit_reps"
            android:layout_width="58dp"
            android:layout_height="40dp"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/increment_reps"
            app:layout_constraintTop_toBottomOf="@+id/edit_weight" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/workout_recycler"
            android:layout_width="382dp"
            android:layout_height="400dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/decrement_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="107dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="32dp"
            android:onClick="onClickDecrementWeight"
            app:layout_constraintEnd_toStartOf="@+id/edit_weight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_remove_black_24dp" />

        <ImageView
            android:id="@+id/decrement_reps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="107dp"
            android:layout_marginTop="59dp"
            android:layout_marginEnd="32dp"
            android:onClick="onClickDecrementReps"
            app:layout_constraintEnd_toStartOf="@+id/edit_reps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/decrement_weight"
            app:srcCompat="@drawable/baseline_remove_black_24dp" />

        <ImageView
            android:id="@+id/increment_reps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="59dp"
            android:layout_marginEnd="114dp"
            android:onClick="onClickIncrementReps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/increment_weights"
            app:srcCompat="@drawable/baseline_add_black_24dp" />

        <ImageView
            android:id="@+id/increment_weights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="114dp"
            android:onClick="onClickIncrementWeights"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_add_black_24dp" />

        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="25dp"
            android:onClick="onClickAdd"
            android:text="@string/add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/decrement_reps" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="36dp"
            android:text="@string/weight"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="108dp"
            android:layout_marginEnd="28dp"
            android:text="@string/reps"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/increment_reps" />

        <Button
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:onClick="onClickUpdate"
            android:text="@string/update"
            app:layout_constraintStart_toStartOf="@+id/increment_reps"
            app:layout_constraintTop_toBottomOf="@+id/increment_reps" />

        <Button
            android:id="@+id/delete"
            android:layout_width="36dp"
            android:layout_height="40dp"
            android:layout_marginEnd="36dp"
            android:onClick="onClickDelete"
            android:background="@drawable/baseline_delete_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/increment_weights" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
